--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -113,32 +113,17 @@
 
 .home-hero.is-entering .hero-char {
   opacity: 0;
-  animation: charTypeIn 0.32s ease forwards;
+  animation-name: charTypeIn, charFloat;
+  animation-duration: 0.32s, 3.5s;
+  animation-timing-function: ease, ease-in-out;
+  animation-delay: var(--char-reveal-delay, 0s), calc(var(--char-reveal-delay, 0s) + 0.32s);
+  animation-iteration-count: 1, infinite;
+  animation-fill-mode: forwards, none;
 }
 
 .home-hero.is-typing .hero-wordmark-line.top::after {
   opacity: 1;
   animation: none;
-}
-
-.home-hero.is-entering .hero-char.c1 {
-  animation-delay: 0.06s;
-}
-
-.home-hero.is-entering .hero-char.c2 {
-  animation-delay: 0.18s;
-}
-
-.home-hero.is-entering .hero-char.c3 {
-  animation-delay: 0.30s;
-}
-
-.home-hero.is-entering .hero-char.c4 {
-  animation-delay: 0.42s;
-}
-
-.home-hero.is-entering .hero-char.c5 {
-  animation-delay: 0.54s;
 }
 
 .hero-char:hover,
@@ -154,26 +139,31 @@
 
 .hero-char.c1 {
   color: #f48024;
+  --char-reveal-delay: 0.06s;
   animation-delay: 0s;
 }
 
 .hero-char.c2 {
   color: #5ec9f5;
+  --char-reveal-delay: 0.18s;
   animation-delay: 0.2s;
 }
 
 .hero-char.c3 {
   color: #8a1f8f;
+  --char-reveal-delay: 0.30s;
   animation-delay: 0.4s;
 }
 
 .hero-char.c4 {
   color: #95d348;
+  --char-reveal-delay: 0.42s;
   animation-delay: 0.6s;
 }
 
 .hero-char.c5 {
   color: #2349a7;
+  --char-reveal-delay: 0.54s;
   animation-delay: 0.8s;
 }
 
@@ -293,18 +283,6 @@
     transform: none;
   }
 
-  .home-hero.is-entering .hero-char,
-  .home-hero.is-entering .hero-wordmark-line.bottom,
-  .home-hero.is-entering .hero-hint {
-    opacity: 1;
-    transform: none;
-    animation: none;
-  }
-
-  .home-hero.is-typing .hero-wordmark-line.top::after {
-    animation: none;
-    opacity: 0;
-  }
 }
 
 @media (max-width: 980px) {
